# baxter-model-scan

./: .gitignore  CMakeLists.txt  README.md  package.xml
cad/scanning_surface/: Scanning Surface.SLDPRT  Scanning Surface.STL  baxter_adapter.stl  new_baxter_scan_surface.stl
kinect2_cal/: README.md  Support_Kinect.STL  kinect_head.STL
scripts/: README.md  clone_repos.sh  install_dependencies.sh  install_freenect.sh
