<?xml version="1.0"?>
<package>
  <name>baxter_model_scan</name>
  <version>0.0.0</version>
  <description>The baxter_model_scan package</description>

  <maintainer email="bettaieb@case.edu">Luc Bettaieb</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  	
  </export>
</package>